# orkee

./: .env.example  .gitignore  .mcp.json  API_SECURITY.md  ARCHITECTURE_AUDIT.md  BUILD.md  CI_STATUS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEPLOYMENT.md  DEV_MODE.md  DEV_MODE_README.md  DOCS.md  IMPLEMENTATION_STATUS.md  LICENSE  MANUAL_TESTING.md  MIGRATION_CONSOLIDATION.md  Makefile  OAUTH_SETUP.md  PLATFORM_SUPPORT.md  PRODUCTION_CHECKLIST.md  PRODUCTION_STATUS_FINAL.md  PR_DESCRIPTION.md  README.md  RELEASE_PROCESS.md  REVERT_SUMMARY.md  SECURITY.md  SECURITY_AUDIT.md  TAURI_REBUILD_GUIDE.md  TELEMETRY.md  TESTING.md  TEST_PLAN.md  WEEK5_SUMMARY.md  ai-usage.md  ccpm-improve.md  ccpm.md  check-ci.sh  claude-token.md  (+26 more)
.cargo/: audit.toml  config.toml
.githooks/: pre-commit
.sqlx/: query-0538cfcd6b6c7ffb5d51951f5fd4a40217b7ffb78c0165fffd9ec822314c08d7.json  query-14e84ecd75358640ec28af1aa96bc6d0233474195fe970e553f33581ebc8d745.json  query-1f3892496818b83321172aba2b57011174c3b7795dfae7d3327061b78f0bb36b.json  query-202a66b6d0ce170e4ad616097137b087971b5b9b02d6069d6ee484f669e5b79a.json  query-21c7442fe8f5dd61ea9a29dc00eace003b334e9f963fda653943f2a9a82c894d.json  query-2670b5d1f9b2646328ba769b97c799df73c62004931874793218a2685e404b71.json  query-3884c002ecbc12ee8b8f3c877f5801a07461b73cb9776658ded3fc283c8c4e2d.json  query-45963f16510355464e90859fd2be7991efe2f4e7ee5166e4527f723d834d6777.json  query-54f8a60d3f1cafdb04ebc7a45c8e51de0d7dc6a936377451f136d81f9a4d7d07.json  query-5b99afc74689fdb5d6090618e39741bc9adbd16ce86e3354104a3555e82c10f3.json  query-7aa426c569a0805c6339a970a2b2d16acaecb05003f718a4db08abc93981006d.json  query-90afd8be73e7552a6cdb2f2aa554d6ff7dbcc1eb38ad629bf5d879366c3dde7f.json  query-99b0600e91cfb5157fbd7b8d78371001cb1f6e73634adcd6dfa0ac619e208191.json  query-a3ce36b6a402814fc1a28fac15bee582996eeee576380d23e930dc235f2bd563.json  query-a5eeb97c674249211e5f0fe1aec891c7ca101f54af1be6626a9aaf169a8289ca.json  query-b2b0de2b211a2c21ac65701cdc09e1f7d014c7b0f25c41b2f2ccaca8abeed0f2.json  query-c570ee3b76973ef969457ed8f3132e5f1ccc08b4b18079873634e0b2a45f1515.json  (+2 more)
cli/: package.json
deployment/: README.md
(+87 files in other folders)
