[workspace]
members = [
    "packages/cli",
    "packages/projects", 
    "packages/preview",
    "packages/tui",
    "packages/mcp-server"
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Orkee Team"]
license = "MIT"
repository = "https://github.com/OrkeeAI/orkee"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"

# Dev dependencies shared across workspace
rstest = "0.18"
mockall = "0.12"
tempfile = "3.8"
tokio-test = "0.4"
pretty_assertions = "1.4"