[workspace]
members = [
    "packages/core",
    "packages/storage",
    "packages/security",
    "packages/openspec",
    "packages/formatter",
    "packages/git_utils",
    "packages/tags",
    "packages/cli",
    "packages/config",
    "packages/projects",
    "packages/cloud",
    "packages/preview",
    "packages/tui",
    "packages/mcp-server"
]
resolver = "2"

[workspace.package]
version = "0.0.9"
edition = "2021"
authors = ["Orkee Team"]
license = "MIT"
repository = "https://github.com/OrkeeAI/orkee"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"

# Tree-sitter - force version 0.20 for all packages
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"

# Dev dependencies shared across workspace
rstest = "0.18"
mockall = "0.12"
tempfile = "3.8"
tokio-test = "0.4"
pretty_assertions = "1.4"

# Optimized release profile balancing size and performance
[profile.release]
opt-level = "s"       # Balanced optimization for both speed and size
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Single codegen unit for better optimization
strip = true          # Strip symbols from binary
panic = "unwind"      # Allow panic recovery and mutex poisoning detection